--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
   </head>
   <body>
     <div class="container">
-      <h1>Peek-a-boo</h1>
+      <h1>Hide-a-Cup</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-      <div class="walrus-hidden">
-        <p>Let's play peek-a-boo. Click here to see the surprise!</p>
+      <div id="initially-showing">
+        <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
       </div>
 
-      <div class="walrus-showing">
-        <p>What a cute walrus! Click here to hide her again.</p>
+      <div id="initially-hidden">
+        <p>What a cute cup that I wouldn't buy! <span class="clickable"> Click here</span> to hide her again.</p>
         <img src="img/walrus.jpeg">
+      </div>
+
+      <div id="initially-showing1">
+        <p>Let's play peek-a-boo. <span class="clickable1">Click here</span> to see the surprise!</p>
+      </div>
+
+      <div id="initially-hidden1">
+        <p>What a cute cup that I wouldn't buy! <span class="clickable1"> Click here</span> to hide her again.</p>
+        <img src="img/cc.jpg">
       </div>
     </div>
   </body>
